using UnityEngine;
public class AnimatorHash
{
    public static readonly int MoveSpeed = Animator.StringToHash("MoveSpeed");
    public static readonly int isShooting = Animator.StringToHash("isShooting");
    public static readonly int IsMoving = Animator.StringToHash("IsMoving");

    public static readonly int faceUp = Animator.StringToHash("faceUp");
    public static readonly int faceDown = Animator.StringToHash("faceDown");
    public static readonly int faceRight = Animator.StringToHash("faceRight");
    public static readonly int faceLeft = Animator.StringToHash("faceLeft");

    public static readonly int IsShow = Animator.StringToHash("IsShow");

}
